# go-ship-it

./: .gitignore  README.md  pyproject.toml
docs/: install.md  manual-parawave-v0.md  user-e2e.md
docs/dogfood/: issue-001-parawave-e2e.md  issue-002-command-config-evidence.md  issue-003-daily-navigation.md  issue-004-user-e2e-hardening.md  issue-005-target-e2e-harness.md  issue-005-usability-navigation-report.md
references/: lifecycle.md
scripts/: install-claude-skills.sh  install-cursor-adapter.sh  run-target-e2e.py
scripts/dev/: run-parawave-e2e.sh
skills/add-issue/: SKILL.md
skills/cleanup-issue/: SKILL.md
skills/cleanup-issue/references/: cleanup-template.md
skills/implement-fix/: SKILL.md
skills/implement-fix/references/: implementation-notes-template.md
skills/investigate-issue/: SKILL.md
skills/investigate-issue/references/: investigation-template.md
skills/propose-fix/: SKILL.md
skills/propose-fix/references/: proposal-template.md
skills/start-issue/: SKILL.md
skills/test-and-review/: SKILL.md
skills/test-and-review/references/: test-review-template.md
src/go_ship_it/: cli.py  doctor.py  frontmatter.py  portable.py  state.py
state/repos/: parawave.yaml
tests/: test_cli_smoke.py  test_doctor.py  test_evidence.py  test_export_run.py  test_frontmatter.py  test_install_adapters.py  test_navigation.py  test_portable.py  test_repo_config.py  test_run_check.py  test_skills.py  test_state.py  test_target_e2e_harness.py
